--- a/Frontend/src/app/modules/employees/facture-form/facture-form.component.html
+++ b/Frontend/src/app/modules/employees/facture-form/facture-form.component.html
@@ -83,6 +83,6 @@
     <div class="invalid-feedback">Por favor ingrese un archivo.</div>
   </div>
   <div class="col-12 mb-2 mt-4">
-    <button type="submit" class="btn btn-outline-red">Agregar</button>
+    <button type="submit" class="btn btn-outline-primary">Agregar</button>
   </div>
 </form>
