--- a/Frontend/src/app/shared/components/modal/modal.component.html
+++ b/Frontend/src/app/shared/components/modal/modal.component.html
@@ -7,9 +7,9 @@
   aria-labelledby="staticBackdropLabel"
   aria-hidden="true"
 >
-  <div class="modal-dialog ">
+  <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header text-center">
         <ng-content [id]="idModal" select="[modalTitle]"></ng-content>
         <button
           type="button"
