--- a/Frontend/src/app/modules/employees/commissions-index/commissions-index.component.html
+++ b/Frontend/src/app/modules/employees/commissions-index/commissions-index.component.html
@@ -22,7 +22,7 @@
 >
   <h5 modalTitle>Solicitar comisión</h5>
   <app-commission-form
-    [error]="error"
-    (commissionSubmit)="createCommission($event)"
+    [error]="onCreateError"
+    (commissionSubmit)="onCreateCommission($event)"
   ></app-commission-form>
 </app-modal>
