Corrección html formulario de comisiones

--- a/Frontend/src/app/modules/authentication/signin/signin.component.html
+++ b/Frontend/src/app/modules/authentication/signin/signin.component.html
@@ -46,7 +46,7 @@
               <div class="col-md-7 col-lg-8">
                 <input
                   formControlName="email"
-                  placeholder="Ingresa el correo electrónico"
+                  placeholder="Ingrese el correo electrónico"
                   type="text"
                   id="email"
                   class="form-control"
@@ -71,7 +71,7 @@
               <div class="col-md-7 col-lg-8">
                 <input
                   formControlName="password"
-                  placeholder="Ingresa la contraseña"
+                  placeholder="Ingrese la contraseña"
                   type="password"
                   id="password"
                   class="form-control"
