--- a/Frontend/src/app/core/components/header/header.component.html
+++ b/Frontend/src/app/core/components/header/header.component.html
@@ -35,6 +35,33 @@
           >
         </li>
       </ul>
+      <ul
+        *ngIf="employee.profile.name === 'Jefe de Area'"
+        class="navbar-nav me-auto mb-2 mb-lg-0"
+      >
+        <li class="nav-item">
+          <a
+            class="btn btn-outline-secondary color-wine mb-2 mb-lg-0"
+            routerLink="/manager/home"
+            routerLinkActive="color-wine-active"
+            >Inicio</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="btn btn-outline-secondary color-wine"
+            routerLink="/manager/commissions"
+            routerLinkActive="color-wine-active"
+            >Comisiones</a
+          >
+          <a
+            class="btn btn-outline-secondary color-wine"
+            routerLink="/manager/employees"
+            routerLinkActive="color-wine-active"
+            >Empleados</a
+          >
+        </li>
+      </ul>
       <a class="btn" routerLink="/signout" class="btn btn-outline-secondary">
         Cerrar sesión
       </a>
