--- a/Frontend/src/app/modules/manager/manager-home/manager-home.component.html
+++ b/Frontend/src/app/modules/manager/manager-home/manager-home.component.html
@@ -1,6 +1,9 @@
-<div *ngIf="manager">
-  <h1 class="display-5">Área de {{ manager?.department }}</h1>
-  <h2 class="h5 mt-4">
-    Bienvenido al sistema de comisiones {{ manager?.name }}
-  </h2>
+<h1 class="h1">
+  Jefe de Área
+  <small class="text-muted display-5"
+    >Departamento de {{ manager?.department.name }}</small
+  >
+</h1>
+<div class="mt-3 content-container" *ngIf="manager">
+  <p class="lead">Bienvenido al sistema de comisiones {{ manager.name }}</p>
 </div>
